--- a/en/pages/languages/translate-plugins/index.txt
+++ b/en/pages/languages/translate-plugins/index.txt
@@ -1,4 +1,25 @@
 Title: Translate plugins
 Position: 2
-Status: draft
 Content:
+
+Translate a plugin of Bludit is very easy, each plugin has a folder called `languages`, in this folder you have the differents dictionary for each language.
+
+This is an example of the English dictionary `en_US.json`
+
+<pre><code data-language="php">
+{
+	"plugin-data":
+	{
+		"name": "Page list",
+		"description": "Shows the list of pages in order.",
+		"author": "Bludit",
+		"email": "",
+		"website": "http://www.bludit.com",
+		"version": "0.1",
+		"releaseDate": "2015-08-02"
+	},
+
+    "home": "Home",
+    "show-home-link": "Show home link"
+}
+</code></pre>
