--- a/en/pages/languages/translate-plugins/index.txt
+++ b/en/pages/languages/translate-plugins/index.txt
@@ -10,9 +10,15 @@ Content: Each plugin have a folder called `languages`, in this folder you have t
 	...
 ```
 
-*Note: The default language on Bludit is English (United States), the locale name is `en_US`, and the filename is `en_US.json`.*
+<div markdown="1" class="note">
+<div class="note-title">NOTE</div>
+The default language in Bludit it's the English language from United States, the locale name is **en_US**, and the filename is **en_US.json**.
+</div>
 
-*Note: All dictionary files are **JSON** files, and are saved by the encoding **UTF-8**.*
+<div markdown="1" class="note">
+<div class="note-title">NOTE</div>
+All dictionary files are **JSON** files, and are saved by the encoding **UTF-8**.
+</div>
 
 ---
 
@@ -35,7 +41,14 @@ This is an example for English (United States) dictionary `en_US.json`. Each lin
 }
 </code></pre>
 
-This is an example for Spanish (Argentina) dictionary, the locale name is `es_AR` then the filename is `es_AR.json`.
+As you can see, you have a field called `plugin-data`, this have all information about the plugin (name, description, author, etc). And the next fields are phrase for the plugin as `home` and `show-home-link`.
+
+<div markdown="1" class="note">
+<div class="note-title">IMPORTANT !</div>
+You don't need translate the fields author, email, website, version and releaseDate because Bludit take this information from the English dictionary **en_US.json**.
+</div>
+
+This is an example for Spanish (Argentina) dictionary, the locale name is `es_AR` then the filename will be `es_AR.json`.
 
 <pre><code data-language="JSON"> {
 	"plugin-data":
@@ -48,7 +61,3 @@ This is an example for Spanish (Argentina) dictionary, the locale name is `es_AR
     "show-home-link": "Mostrar link de la pagina de incio"
 }
 </code></pre>
-
-As you can see, you have a field called `plugin-data`, this have all information about the plugin (name, description, author, etc). And the next fields are phrase for the plugin as `home` and `show-home-link`.
-
-*Note: You don't need translate the fields author, email, website, version and releaseDate because Bludit take this information from the dictionary en_US.json.*
