--- a/en/pages/languages/translate-plugins/index.txt
+++ b/en/pages/languages/translate-plugins/index.txt
@@ -1,4 +1,5 @@
 Title: Translate plugins
+Position: 2
 Content: Each plugin has a folder called `languages`, in this folder you have the different dictionary files for each language.
 
 ```
